# ur_ik_plugin

./: .gitignore  README.md  ur_ik_plugin.xml
src/: ur_ik_moveit_plugin.cpp
src/ur_ik_plugin/: CMakeLists.txt  package.xml  ur_ik_plugin.xml
src/ur_ik_plugin/src/: ur_ik_solver.cpp
